# axum_learn

./: Cargo.toml  README.md
base-common/: Cargo.toml  README.md
base-common/src/: date.rs  environment.rs  lib.rs
config/: env.toml  log4rs.yaml
database-common/: Cargo.toml  README.md
database-common/resource/: db_init.sql
database-common/src/: lib.rs
database-common/src/entity/: mod.rs  prelude.rs  roles.rs  tickets.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  main.rs  tables.rs
migration/src/tables/: roles.rs  tickets.rs  users.rs
redis-common/: Cargo.toml  README.md
redis-common/src/: lib.rs  redis_opt.rs
src/: ctx.rs  error.rs  log.rs  main.rs  system_log.rs  test.rs
src/web/: common.rs  hello_world.rs  login.rs  mod.rs  mw_auth.rs  role.rs
src/web/hello_world/: model.rs  routes_hello.rs  service_hello.rs
src/web/login/: model.rs  routes_login.rs  service_login.rs
src/web/role/: model.rs  routes_role.rs  service_role.rs
src/web/ticket/: model.rs  routes_tickets.rs  service_ticket.rs
src/web/user/: model.rs  routes_users.rs  service_user.rs
